Use DevTools to debug and fix source of hero-image margin mis-alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,14 +91,14 @@ h1, h2, {
     background-color: rgba (213, 245,39, .16);
     overflow: hidden;
     position: relative;
-    width: 100%;
     height: 600px;
-    padding: 20px;
+    /* padding: 20px; */
+    margin: 10px;
 }
 
 #hero-image {
     
-    height: 550px;
+    height: 100%;
     
     background-color: #fff;
     background: url(../images/hero-image-keyboard-and-sheet-music.webp) no-repeat center center;
@@ -286,7 +286,7 @@ br {
 /* footer */
 
 footer {
-    min-height: 6.25vw;
+    min-height: 6.25vh;
      
 }
 
